--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,15 @@
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/school_Vertliner?zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=6977655977gf
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.security.user.name=geo
+spring.security.user.password=geo
+spring.security.user.roles=user
 
